# unicore-minimal

./: .gitignore  .gitmodules  CMakeLists.txt  make-project-vs2022.bat
src/: MinimalCore.cpp  MinimalCore.hpp  main.cpp
